--- a/app/src/main/res/layout/activity_eating1.xml
+++ b/app/src/main/res/layout/activity_eating1.xml
@@ -72,6 +72,7 @@
 
     <TextView
         android:id="@+id/textView4"
+        android:textAlignment="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="144dp"
